added some styling to it, need to figure out the aside piece

--- a/index.html
+++ b/index.html
@@ -9,46 +9,65 @@
     <header>
         <nav>
             <ul>
-                <li>Refractored code</li>
-                <li>hiking weather app</li>
-                <li>another one</li>
+                <a href="#h1">refratored</a>
+                <a href="#">Hiking website</a>
+                <a href="#">more</a>
+                <a href="#">more</a>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="about-me">
-            <h1 >About Me</h1>
-            <h2 class="about-me">Alex Lara</h2>
-            <img src="" alt="Picture of Alex" class="about-me">
-            <h2 class="about-me">lil about me</h2>
-            <p class="about-me">
+            <div class="about-me">
+                <h1 >About Me</h1>
+                <h2 >Alex Lara</h2>
+                <img src="" alt="Picture of Alex">
+                <h2>lil about me</h2>
+                <p>
                 Hello, my name is Alex, and i am interseted in programming and computer science.
-                I play video games pretty often.
-            </p>
-        </div>
+                    I play video games pretty often.
+                </p>
+            </div>
+
+            <div class="projects">
+                <!-- project -->
+                code 1
+            </div>
+            
+            <div class="projects">
+                <!-- project -->
+                code 2
+            </div>
+
+            <div class="projects">
+                <h1>Project 1 hiking api</h1>
+                <!-- project -->
+            </div>
+   
+            <aside>
+            <div class="card">
+                <!-- project 1 -->
+                <p #h1>
+                    refratored code
+                </p>
+            </div>
+
+            <div class="card">
+
+                cars
+                <!-- project 2 -->
+            </div>
+
+            <div class="card">
+                <!-- project 3 -->
+            </div>
+            </aside>
+
+        
+            <footer>
+            <a href="http://">Github</a>
+            <a href="">Email</a>
+            </footer>
     </main>
-
-    <aside>
-        <div class="card">
-            <!-- project 1 -->
-            <p>
-                refratored code
-            </p>
-        </div>
-
-        <div>
-            <!-- project 2 -->
-        </div>
-
-        <div>
-            <!-- project 3 -->
-        </div>
-    </aside>
-
-    <footer>
-        <a href="http://">Github</a>
-        <a href="">Email</a>
-    </footer>
 </body>
 </html>
