added final selfie

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="about-me">
             <h1 >Alex Lara</h1>
             <h2 >Me</h2>
-            <img src="./assets/images/NA.png" alt="Picture of Alex">
+            <img src="./assets/images/Selifee.jpg" alt="Picture of Alex">
             <h2>lil about me</h2>
             <p>
                Hello, my name is Alex, and i am interseted in programming and computer science.
